--- a/introduction.tex
+++ b/introduction.tex
@@ -1,12 +1,22 @@
 \chapter*{Introduction}
 \addcontentsline{toc}{chapter}{Introduction}
+The aim of this thesis is to create a system for extracting opinions and sentiment from conference paper reviews. In other words, the goal is to build a system which will allow to automatically determine the opinion of the author of the review on different aspects of the reviewed paper.
+Papers submitted to a conference go through a reviewing process, the goal of which is to decide whether the paper will be accepted to the conference or not. The structure of these reviews varies across conferences as well as individual reviewers. Sometimes comments in the reviews are separated by the different criteria the paper is judged by (such as presentation or relevance to the conference). Other times they are separated by the positive and negative remarks, while some conferences require the reviewers to give numerical scores to a set of chosen criteria. However, often there is no structure required.
 
-The aim of this thesis is to create a system for extracting opinions and sentiment from conference paper reviews. In other words the system will allow to automatically determine the opinion of the author of the review on different aspects of the reviewed paper. 
+Because each submitted paper is reviewed by many people, and because each conference has its own structure of the review form as well as a different set of criteria it is difficult to quickly get an idea of the quality of the submitted work. Being able to get a general idea of how good a paper is as well as swiftly assessing what are the strong and weak parts of a submission is especially important for meta-reviewers during the discussion periods, as their goal is to provide a summary of the more in-depth reviews. 
 
-Because each submitted paper is going to be reviewed by many people, and because each conference has its own structure of the review form as well as different set of criteria it’s very difficult to quickly get an idea of the quality of the submitted work. Being able to get a general idea of how good a paper is as well as quickly assessing what are the strong and weak parts of a submission is especially important for meta-reviewers during the discussion periods.
+ Therefore, the idea behind this thesis is to create a process able to determine these qualities and assess the value of the reviewed paper in order to improve the mechanics of acceptance or rejection.
 
-Extracting the opinions of the reviewer on a paper, mapping it onto a unified set of criteria and transforming it into a numerical value could significantly simplify the process of submission acceptance as well as provide a way to compare reviews of the same paper across different conferences and reviewers.
+Extracting the opinions of the reviewer on a paper, mapping it onto a unified set of criteria and transforming it into a numerical value could significantly simplify the process of submission acceptance. It can also provide a way to compare reviews of the same paper across different conferences and reviewers.
 
-The system created here could also serve as a base for a larger review management system that is able to generate a visual metaphor of each  review that reflects different review metrics. Visual images are faster and easier to understand than written text, therefore it should make the meta-analysis more comfortable and effective.
+The ability to extract opinions of reviewers on different criteria could also provide a way to carry out a larger study to ascertain which aspects of a paper get criticized routinely and why. This has a potential to help future authors to improve their papers accordingly before submission and therefore reduce the risk of their paper being rejected by avoiding the common mistakes of other authors.
 
-In order to implement such a system, it’s necessary to create a set of review metrics to which the fields of different conference review forms will be mapped. Then apply a technique of information extraction to get the opinion of the reviewer on each of these metrics. In order to then get a numeric  evaluation of the sentiment of the specific opinion a sentiment analysis technique has to be used. 
+My motivation for the topic of this thesis is that I find the field of sentiment analysis incredibly interesting and I see an immense potential in its application in various domains. So far it has been mostly studied in connection to social networks or product reviews but I believe that it could be also applied to a number of different tasks, such as the one explored in this thesis or for example to study the objectivity of media.
+The system created here could also serve as a base for a larger review management system that is able to generate a visual metaphor of each review that reflects different review metrics. Visual images are faster and easier to understand than written text, therefore it should make the meta-analysis more comfortable and effective. The prototype of this visual metaphor generator was already created and accepted as a demo by the International Semantic Web Conference 2020 \cite{pictoreview_iswc}. Given the fact I took part in this project and would like to see it expand further, the creation of a tool that would allow unstructured reviews to utilize this mechanism is an additional motivation. Especially because at this point the visual metaphor generator only works for reviews containing numerical scores.
+
+In order to implement such a system, it is necessary to create a set of review metrics to which the fields of different conference review forms would be mapped on and which would serve as the criteria extracted from the reviews. Then in order to recognize which of these criteria a reviewer is focusing on in a specific comment a dictionary of terms or aspect expressions, which are linked to these criteria, needs to be assembled. To find out whether a comment on some aspect of the paper is positive or negative a domain-specific sentiment lexicon needs to be compiled. This lexicon consists of words which point to a positive or negative polarity of an opinion. Then a method of aspect-based sentiment analysis needs to be designed and implemented. This technique of information extraction should then be applied to get the opinion of the reviewer on each of these metrics.
+
+The theoretical part of this thesis consists of the following parts: The first chapter introduces the field of sentiment analysis and explains some common tools and methods used to extract sentiment. Tasks and tools of natural language processing are defined and explained in the second chapter, because sentiment analysis is a sub-field of natural language processing. The third and last chapter of the theoretical part offers an insight into the studied domain of conference submission reviews and examines existing research with a similar focus.
+
+The practical part of the thesis is described in chapters four through nine. First the methods chosen for the implementation are described. Chapter four familiarizes the reader with reasoning behind the approach to give them an overarching understanding of the sentiment analysis algorithm. Each step of the implementation is then explained in more detail. The review data were gathered from multiple sources and different preprocessing steps were needed for different tasks of the implementation, therefore the following chapter explains how the data was gathered and prepared for various usages. Chapter six covers the varied methods used to extract aspect or criterion expressions from the reviews. Chapter seven recounts the creation of a sentiment lexicon. The implementation of an aspect-based sentiment analysis algorithm which uses the dictionary of criterion expressions and the sentiment lexicon to discover the reviewer's opinion on the different aspects of the paper is described in chapter eight. Finally section nine provides a complex evaluation of the accuracy of the algorithm based on the estimated numerical scores for the set of criteria. The correctness of the output on a sentence level is also determined in the last chapter of the practical part of this thesis.
+
