--- a/literatura.bib
+++ b/literatura.bib
@@ -19,6 +19,49 @@ author={Liu, Bing},
 year={2015},
 isbn = {978-1-107-01789-4}
 }
+
+@book{liu_2006,
+author = {Liu, Bing},
+title = {Web Data Mining: Exploring Hyperlinks, Contents, and Usage Data (Data-Centric Systems and Applications)},
+year = {2006},
+isbn = {3540378812},
+publisher = {Springer-Verlag},
+address = {Berlin, Heidelberg}
+}
+@Inbook{Kumar2020,
+author="Kumar, Ashish
+and Sharan, Aditi",
+editor="Agarwal, Basant
+and Nayak, Richi
+and Mittal, Namita
+and Patnaik, Srikanta",
+title="Deep Learning-Based Frameworks for Aspect-Based Sentiment Analysis",
+bookTitle="Deep Learning-Based Approaches for Sentiment Analysis",
+year="2020",
+publisher="Springer Singapore",
+address="Singapore",
+pages="139--158",
+abstract="Opinions are key influencers of almost all human practices. One can easily find a number of opinions about any product or services in the form of product reviews. These product reviews are available in a tremendous amount. It is not feasible or even impossible to go through each review and make a concise decision about any product. Aspect-based sentiment analysis (ABSA) comes as a solution to this problem. It gives an approach to examine online reviews and provides a summary based on these reviews. Machine learning techniques have been broadly utilized for ABSA. Recently with the evolution of processing power of computers and digitization of the society, deep learning is taking off. Deep learning methods produced state-of-the-art results in various NLP tasks without intensive feature engineering. In this chapter, we present an introduction about ABSA following a comprehensive overview of various deep learning models used in the field of ABSA.",
+isbn="978-981-15-1216-2",
+doi="10.1007/978-981-15-1216-2_6",
+url="https://doi.org/10.1007/978-981-15-1216-2_6"
+}
+
+@article{bing_dl_survey,
+author = {Zhang, Lei and Wang, Shuai and Liu, Bing},
+title = {Deep learning for sentiment analysis: A survey},
+journal = {WIREs Data Mining and Knowledge Discovery     },
+volume = {8},
+number = {4},
+pages = {e1253},
+keywords = {data mining, deep learning, machine learning, natural language processing, neural network, opinion mining, sentiment analysis, survey},
+doi = {https://doi.org/10.1002/widm.1253},
+url = {https://onlinelibrary.wiley.com/doi/abs/10.1002/widm.1253},
+eprint = {https://onlinelibrary.wiley.com/doi/pdf/10.1002/widm.1253},
+abstract = {Deep learning has emerged as a powerful machine learning technique that learns multiple layers of representations or features of the data and produces state-of-the-art prediction results. Along with the success of deep learning in many application domains, deep learning is also used in sentiment analysis in recent years. This paper gives an overview of deep learning and then provides a comprehensive survey of its current applications in sentiment analysis. This article is categorized under: Fundamental Concepts of Data and Knowledge > Data Concepts Algorithmic Development > Text Mining},
+year = {2018}
+}
+
 @book{bagofwords,
 author = {Jurafsky, Daniel and Martin, James},
 year = {2018},
@@ -125,7 +168,19 @@ author = {Svátek, Vojtěch and Strossa,  Petr},
 year = {2019},
 title = {Let’s Get the Best Papers to the Finish Line: Ontological and Pictorial Representation of Review Scores },
 }
-
+@article { do_not,
+      author = "Peyman G. P. Sabet and Grace Q. Zhang",
+      title = "“I don’t think” versus “I think + not”",
+      journal = "Text \& Talk",
+      year = "01 May. 2017",
+      publisher = "De Gruyter Mouton",
+      address = "Berlin, Boston",
+      volume = "37",
+      number = "3",
+      doi = "https://doi.org/10.1515/text-2017-0010",
+      pages= "387 - 408",
+      url = "https://www.degruyter.com/view/journals/text/37/3/article-p387.xml"
+}
 @misc{sentimentr,
     author       = {Rinker, Tyler and Spinu, Vitalie},
     title        = {sentimentr},
@@ -159,6 +214,36 @@ title = {Let’s Get the Best Papers to the Finish Line: Ontological and Pictori
     note = "online, accessed 09-November-2020",
     url = "http://www.nltk.org/api/nltk.corpus.reader.html?highlight=wordnet#nltk.corpus.reader.wordnet.Lemma.synset"
     }
+
+    
+ @inproceedings{pictoreview_iswc,
+      author    = {Svátek, Vojtěch and Juranková, Sára and Šalda, Radomír and Strossa, Petr and Vondra, Zdeněk},
+      title     = "Creating and Exploiting the Mappings from Conference
+Review Forms to a Generic Set of Review Criteria",
+      booktitle = "Proceedings of the ISWC 2020 Demos and Industry Tracks: From Novel Ideas to Industrial Practice
+co-located with 19th International Semantic Web Conference (ISWC 2020)",
+year = "2020",
+    note = "online, accessed 2-November-2020",
+    url = "http://ceur-ws.org/Vol-2721/paper567.pdf"
+    }    
+    
+ @Misc{ nltk_mwe_docs,
+    title = "
+Source code for nltk.tokenize.mwe",
+    author = {Malouf, Rob},
+    year = "2020",
+    note = "online, accessed 12-November-2020",
+    url = "https://www.nltk.org/_modules/nltk/tokenize/mwe.html"
+    }
+    
+     @Misc{ python_best,
+    title = "The 5 Best Programming Languages for AI",
+    author = {Zola, Andrew},
+    year = "2018",
+    note = "online, accessed 15-November-2020",
+    url = "https://www.springboard.com/blog/best-programming-language-for-ai/"
+    }
+    
 @book{nltk_ps,
 author = {Bird, Steven and Klein, Ewan and Loper, Edward},
 title = {Natural Language Processing with Python},
