--- a/zacatek.tex
+++ b/zacatek.tex
@@ -41,7 +41,28 @@ Supervisor: & \Vedouci \\
 Prague, \DatumOdevzdani
 \end{center}
 
+\hypersetup{pageanchor=true}
+\cleardoublepage
+\pagestyle{plain}
+\openright
+\vspace*{\fill}
+\begin{otherlanguage}{czech}
+\section*{Prohlášení}
+\noindent
+\Prohlaseni
 
+\vspace*{4em}\noindent
+\hfill%
+\begin{tabular}[t]{c}
+  5.12.2020
+\end{tabular}%
+\hfill%
+\begin{tabular}[t]{c}
+  \hbox to 12em{\leaders\hbox to 5pt{\hss . \hss}\hfil}\\ Bc. Sára Juranková
+\end{tabular}%
+\hfill\strut
+
+\end{otherlanguage}
 %%% Poděkování
 \hypersetup{pageanchor=true}
 \cleardoublepage
@@ -58,17 +79,16 @@ Prague, \DatumOdevzdani
 \openright
 \section*{Abstract}
 \noindent
-\Abstrakt
+\Abstract
 \subsection*{Keywords}
 \noindent
-\KlicovaSlova
+\KeyWords
 
-\bigskip\bigskip\bigskip
+\newpage
 \section*{Abstrakt}
 \noindent
-\AbstraktEN
+\Abstrakt
 \subsection*{Klíčová slova}
 \noindent
-\KlicovaSlovaEN
-
+\KlicovaSlova
 \openright
