--- a/zkratky.tex
+++ b/zkratky.tex
@@ -3,17 +3,18 @@
 \begin{multicols}{2}
 \raggedright
 \begin{description}
-\item [BCC] Blind Carbon Copy
-\item [CC] Carbon Copy
-\item [CERT] Computer Emergency Response Team
-\item [CSS] Cascading Styleheets
-\item [DOI] Digital Object Identifier
-\item [HTML] Hypertext Markup Language
-\item [REST] Representational State Transfer
-\item [SOAP] Simple Object Access Protocol
-\item [URI] Uniform Resource Identifier
-\item [URL] Uniform Resource Locator
-\item [XML] eXtended Markup Language
+\item [EKAW] European Knowledge Acquisition Workshop
+\item [ESWC] European Semantic Web Conference
+\item [FN] False Negative
+\item [FP] False Positive
+\item [ISWC] International Semantic Web Conference
+\item [MAE] Mean Absolute Error
+\item [ML] Machine Learning
+\item [NLP] Natural Language Processing
+\item [NLTK] Natural Language Toolkit
+\item [POS] Part Of Speech
+\item [ST] Semantic Technology
+\item [TP] True Positive
 \end{description}
 \end{multicols}
 
